--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="listViewText">Hi</string>
     <string name="welcomeToMarket">Welcome to MyMarketplace</string>
 
-    <!--    ItemView Strings-->
+    <!--    ItemInfo Strings-->
     <string name="singleItem">Display Single Item Info</string>
     <string name="itemImageViewDescription">An image of the item.</string>
     <string name="CartButton">Add to cart</string>
@@ -16,5 +16,11 @@
     <string name="ItemDescription">About item</string>
     <string name="ItemPrice">$12.00</string>
     <string name="ItemStock">5 available</string>
+
+    <!--    SellerInfo String-->
     <string name="title_activity_maps">MapsActivity</string>
+    <string name="maps_speakable_text">Map showing the store location</string>
+    <string name="SellerName"></string>
+    <string name="SellerAddress"></string>
+
 </resources>
