--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="ItemDescription">About item</string>
     <string name="ItemPrice">$12.00</string>
     <string name="ItemStock">5 available</string>
+    <string name="ItemReviews">No reviews yet.</string>
 
     <!--    SellerInfo String-->
     <string name="title_activity_maps">MapsActivity</string>
