--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,11 +17,14 @@
     <string name="ItemPrice">$12.00</string>
     <string name="ItemStock">5 available</string>
     <string name="ItemReviews">No reviews yet.</string>
+    <string name="ScamWarningTitle">Warning: Possible scam</string>
+    <string name="ScamWarningMessage">Our systems have flagged this product as a possible scam. Proceed with caution.</string>
 
     <!--    SellerInfo String-->
     <string name="title_activity_maps">MapsActivity</string>
     <string name="maps_speakable_text">Map showing the store location</string>
     <string name="SellerName"></string>
     <string name="SellerAddress"></string>
+
 
 </resources>
