--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,9 @@
     <string name="password">Password</string>
     <string name="warning_invalid_credential">Invalid username/password</string>
     <string name="warning_empty_credential">%1$s cannot be empty.</string>
-    <string name="listViewText">Hi</string>
+    <string name="listViewText">Welcome back</string>
     <string name="welcomeToMarket">Welcome to MyMarketplace</string>
+    <string name="happybrowsing">! Suggested for you</string>
 
     <!--    ItemInfo Strings-->
     <string name="singleItem">Display Single Item Info</string>
